update docs for simplified example

--- a/_modules/index.html
+++ b/_modules/index.html
@@ -34,6 +34,7 @@
             
   <h1>All modules for which code is available</h1>
 <ul><li><a href="polyclonal/pdb_utils.html">polyclonal.pdb_utils</a></li>
+<li><a href="polyclonal/plot.html">polyclonal.plot</a></li>
 <li><a href="polyclonal/polyclonal.html">polyclonal.polyclonal</a></li>
 <li><a href="polyclonal/utils.html">polyclonal.utils</a></li>
 </ul>
