--- a/genindex.html
+++ b/genindex.html
@@ -38,6 +38,7 @@
 <div class="genindex-jumpbox">
  <a href="#A"><strong>A</strong></a>
  | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#M"><strong>M</strong></a>
@@ -45,7 +46,6 @@
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
- | <a href="#V"><strong>V</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
@@ -54,8 +54,12 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.AAS_NOSTOP">AAS_NOSTOP (in module polyclonal.polyclonal)</a>
 </li>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.activity_wt_barplot">activity_wt_barplot() (polyclonal.polyclonal.Polyclonal method)</a>
+      <li><a href="polyclonal.plot.html#polyclonal.plot.activity_wt_barplot">activity_wt_barplot() (in module polyclonal.plot)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.activity_wt_barplot">(polyclonal.polyclonal.Polyclonal method)</a>
 </li>
+      </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.activity_wt_df">activity_wt_df (polyclonal.polyclonal.Polyclonal property)</a>
@@ -68,7 +72,15 @@
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="polyclonal.utils.html#polyclonal.utils.color_gradient_hex">color_gradient_hex() (in module polyclonal.utils)</a>
+      <li><a href="polyclonal.plot.html#polyclonal.plot.color_gradient_hex">color_gradient_hex() (in module polyclonal.plot)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.data_to_fit">data_to_fit (polyclonal.polyclonal.Polyclonal attribute)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -106,6 +118,8 @@
 </li>
         <li><a href="polyclonal.pdb_utils.html#module-polyclonal.pdb_utils">polyclonal.pdb_utils</a>
 </li>
+        <li><a href="polyclonal.plot.html#module-polyclonal.plot">polyclonal.plot</a>
+</li>
         <li><a href="polyclonal.polyclonal.html#module-polyclonal.polyclonal">polyclonal.polyclonal</a>
 </li>
         <li><a href="polyclonal.utils.html#module-polyclonal.utils">polyclonal.utils</a>
@@ -115,10 +129,18 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_df">mut_escape_df (polyclonal.polyclonal.Polyclonal property)</a>
 </li>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_heatmap">mut_escape_heatmap() (polyclonal.polyclonal.Polyclonal method)</a>
+      <li><a href="polyclonal.plot.html#polyclonal.plot.mut_escape_heatmap">mut_escape_heatmap() (in module polyclonal.plot)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_heatmap">(polyclonal.polyclonal.Polyclonal method)</a>
 </li>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_lineplot">mut_escape_lineplot() (polyclonal.polyclonal.Polyclonal method)</a>
+      </ul></li>
+      <li><a href="polyclonal.plot.html#polyclonal.plot.mut_escape_lineplot">mut_escape_lineplot() (in module polyclonal.plot)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_lineplot">(polyclonal.polyclonal.Polyclonal method)</a>
 </li>
+      </ul></li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_pdb_b_factor">mut_escape_pdb_b_factor() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_site_summary_df">mut_escape_site_summary_df (polyclonal.polyclonal.Polyclonal property)</a>
@@ -156,6 +178,13 @@
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    polyclonal.plot
+
+      <ul>
+        <li><a href="polyclonal.plot.html#module-polyclonal.plot">module</a>
+</li>
+      </ul></li>
       <li>
     polyclonal.polyclonal
 
@@ -198,15 +227,7 @@
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.Traceback">Traceback (polyclonal.polyclonal.Polyclonal attribute)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="V">V</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.ValueError">ValueError (polyclonal.polyclonal.Polyclonal attribute)</a>
+      <li><a href="polyclonal.plot.html#polyclonal.plot.TAB10_COLORS_NOGRAY">TAB10_COLORS_NOGRAY (in module polyclonal.plot)</a>
 </li>
   </ul></td>
 </tr></table>
