--- a/polyclonal.pdb_utils.html
+++ b/polyclonal.pdb_utils.html
@@ -17,7 +17,7 @@
     <script crossorigin="anonymous" integrity="sha256-Ae2Vz/4ePdIu6ZyI/5ZGsYnb+m0JlOmKPjt6XZ9JJkA=" src="https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.4/require.min.js"></script>
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
-    <link rel="next" title="polyclonal" href="polyclonal.polyclonal.html" />
+    <link rel="next" title="plot" href="polyclonal.plot.html" />
     <link rel="prev" title="fit" href="polyclonal.fit.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
@@ -184,7 +184,7 @@ other sites (such as 335) assigned to -1:</p>
   <li><a href="index.html">Documentation overview</a><ul>
   <li><a href="polyclonal.html">polyclonal package</a><ul>
       <li>Previous: <a href="polyclonal.fit.html" title="previous chapter">fit</a></li>
-      <li>Next: <a href="polyclonal.polyclonal.html" title="next chapter">polyclonal</a></li>
+      <li>Next: <a href="polyclonal.plot.html" title="next chapter">plot</a></li>
   </ul></li>
   </ul></li>
 </ul>
