--- a/genindex.html
+++ b/genindex.html
@@ -41,6 +41,7 @@
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
+ | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
@@ -103,6 +104,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.fit">fit() (polyclonal.polyclonal.Polyclonal method)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.icXX">icXX() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
   </ul></td>
 </tr></table>
