--- a/genindex.html
+++ b/genindex.html
@@ -103,6 +103,10 @@
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.filter_variants_by_seen_muts">filter_variants_by_seen_muts() (polyclonal.polyclonal.Polyclonal method)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.fit">fit() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
   </ul></td>
