--- a/_modules/index.html
+++ b/_modules/index.html
@@ -36,6 +36,7 @@
 <ul><li><a href="polyclonal/pdb_utils.html">polyclonal.pdb_utils</a></li>
 <li><a href="polyclonal/plot.html">polyclonal.plot</a></li>
 <li><a href="polyclonal/polyclonal.html">polyclonal.polyclonal</a></li>
+<li><a href="polyclonal/polyclonal_collection.html">polyclonal.polyclonal_collection</a></li>
 <li><a href="polyclonal/utils.html">polyclonal.utils</a></li>
 </ul>
 
