--- a/polyclonal.utils.html
+++ b/polyclonal.utils.html
@@ -18,7 +18,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="package index" href="package_index.html" />
-    <link rel="prev" title="polyclonal" href="polyclonal.polyclonal.html" />
+    <link rel="prev" title="polyclonal_collection" href="polyclonal.polyclonal_collection.html" />
    
   <link rel="stylesheet" href="_static/custom.css" type="text/css" />
   
@@ -187,7 +187,7 @@ alphabet.</p></li>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
   <li><a href="polyclonal.html">polyclonal package</a><ul>
-      <li>Previous: <a href="polyclonal.polyclonal.html" title="previous chapter">polyclonal</a></li>
+      <li>Previous: <a href="polyclonal.polyclonal_collection.html" title="previous chapter">polyclonal_collection</a></li>
       <li>Next: <a href="package_index.html" title="next chapter">package index</a></li>
   </ul></li>
   </ul></li>
