--- a/genindex.html
+++ b/genindex.html
@@ -48,6 +48,7 @@
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  | <a href="#W"><strong>W</strong></a>
  
 </div>
@@ -73,6 +74,10 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.plot.html#polyclonal.plot.color_gradient_hex">color_gradient_hex() (in module polyclonal.plot)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.create_bootstrap_sample">create_bootstrap_sample() (in module polyclonal.polyclonal_collection)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -112,6 +117,8 @@
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.fit">fit() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.fit_models">fit_models() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
   </ul></td>
 </tr></table>
 
@@ -134,6 +141,10 @@
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.make_predictions">make_predictions() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.models">models (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
+</li>
       <li>
     module
 
@@ -146,13 +157,17 @@
 </li>
         <li><a href="polyclonal.polyclonal.html#module-polyclonal.polyclonal">polyclonal.polyclonal</a>
 </li>
+        <li><a href="polyclonal.polyclonal_collection.html#module-polyclonal.polyclonal_collection">polyclonal.polyclonal_collection</a>
+</li>
         <li><a href="polyclonal.utils.html#module-polyclonal.utils">polyclonal.utils</a>
 </li>
       </ul></li>
-      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_df">mut_escape_df (polyclonal.polyclonal.Polyclonal property)</a>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mut_bootstrap_freq_dict">mut_bootstrap_freq_dict (polyclonal.polyclonal_collection.PolyclonalCollection property)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mut_escape_df">mut_escape_df (polyclonal.polyclonal.Polyclonal property)</a>
+</li>
       <li><a href="polyclonal.plot.html#polyclonal.plot.mut_escape_heatmap">mut_escape_heatmap() (in module polyclonal.plot)</a>
 
       <ul>
@@ -172,7 +187,11 @@
       <li><a href="polyclonal.utils.html#polyclonal.utils.MutationParser">MutationParser (class in polyclonal.utils)</a>
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.mutations">mutations (polyclonal.polyclonal.Polyclonal attribute)</a>
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.mutations">(polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
 </li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -197,8 +216,6 @@
         <li><a href="polyclonal.pdb_utils.html#module-polyclonal.pdb_utils">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     polyclonal.plot
 
@@ -213,6 +230,15 @@
         <li><a href="polyclonal.polyclonal.html#module-polyclonal.polyclonal">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    polyclonal.polyclonal_collection
+
+      <ul>
+        <li><a href="polyclonal.polyclonal_collection.html#module-polyclonal.polyclonal_collection">module</a>
+</li>
+      </ul></li>
       <li>
     polyclonal.utils
 
@@ -220,6 +246,12 @@
         <li><a href="polyclonal.utils.html#module-polyclonal.utils">module</a>
 </li>
       </ul></li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection">PolyclonalCollection (class in polyclonal.polyclonal_collection)</a>
+</li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.PolyclonalFitError">PolyclonalFitError</a>
+</li>
+      <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.PolyclonalHarmonizeError">PolyclonalHarmonizeError</a>
+</li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.prob_escape">prob_escape() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
   </ul></td>
@@ -240,11 +272,15 @@
 </li>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.site_level_model">site_level_model() (polyclonal.polyclonal.Polyclonal method)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.utils.html#polyclonal.utils.site_level_variants">site_level_variants() (in module polyclonal.utils)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.polyclonal.html#polyclonal.polyclonal.Polyclonal.sites">sites (polyclonal.polyclonal.Polyclonal attribute)</a>
+</li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.summarize_bootstraped_predictions">summarize_bootstraped_predictions() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
+</li>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.summarize_bootstrapped_params">summarize_bootstrapped_params() (polyclonal.polyclonal_collection.PolyclonalCollection method)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -253,6 +289,14 @@
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="polyclonal.plot.html#polyclonal.plot.TAB10_COLORS_NOGRAY">TAB10_COLORS_NOGRAY (in module polyclonal.plot)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="polyclonal.polyclonal_collection.html#polyclonal.polyclonal_collection.PolyclonalCollection.unsampled_mutations">unsampled_mutations (polyclonal.polyclonal_collection.PolyclonalCollection attribute)</a>
 </li>
   </ul></td>
 </tr></table>
